<resources>
    <string name="app_name">Modern Bazaar</string>
    <string name="create_account">Create Your Account</string>
    <string name="main_description">Join India"'s very own platform for fulfilling your needs with things you have.</string>
    <string name="signup">Sign up</string>
    <string name="signin">Sign in to your Existing Account</string>
    <string name="emailid">Email Id</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="visitor">Continue as a Visitor</string>
    <string name="invalidcredentials">You have entered Invalid Credentials, Please try again!</string>
    <string name="signup_des">Join new world of Exchanging Products</string>
    <string name="enter_email">Enter your Email Id</string>
    <string name="set_pass">Set a Password</string>
    <string name="continuetxt">Continue</string>
    <string name="logininstead">Login Instead</string>
    <string name="back">Back to Previous</string>
    <string name="tellusabout">Tell us about yourself</string>
    <string name="selectgender">Select Your Gender</string>
    <string name="fullname">Enter your Full Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="enter_age">Enter Your Age</string>
    <string name="street">Enter Your Street Address</string>
    <string name="city">Enter Your City</string>
    <string name="state">Enter Your State</string>
    <string name="country">Enter Your Country</string>
    <string name="verifynumber">Verify Your Number</string>
    <string name="verifytxt">Please enter your Country Code and Phone number for verification</string>
    <string name="generateotp">Generate OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otptxt">We have sent you an OTP for phone number verification</string>
    <string name="verifyotp">Verify OTP</string>
    <string name="tandc">Terms and Conditions</string>
    <string name="accept">Accept and Continue</string>
    <string name="reject">Reject</string>
    <string name="tnc">1. MBSP can be modified by product verifier at the time of product verification.\n2. In detection of any fraud, legal action can be taken against you.\n3. If any user will file a complain against you and if the complain proved to be legit than your personal details such as address and phone number will be directly shared.\n4. In case of inactivity on the platform of at most 15 days, your account will be deactivated to maintain consistency on the platform.</string>
    <string name="inconvinience">Sorry for your Inconvenience</string>
    <string name="inconviniencetxt">our user"'s experience matters the most to us, and we can achieve that by the means of terms and conditions that you need to agree on, this helps us to create an amazing exchange environment with trust on both sides.</string>
    <string name="backtotc">Back to Terms and Conditions</string>
    <string name="exit">Exit Application</string>
    <string name="fillerror">Please fill all Fields</string>
    <string name="error">Oops error occur, Please try again!</string>
    <string name="accountsuccess">Account has been created successfully</string>
    <string name="loginsuccess">Logged In successfully</string>
    <string name="visitortitle">Exchange your product Now!</string>
    <string name="setmaxmbsp">Set Max MBSP</string>
    <string name="viewindetail">View in Detail</string>
    <string name="mbspdes">MBSP - Modern Bazaar Selling Price, is the price calculated when you add a product on the platform, which can be modified by the product verification team.</string>
    <string name="mbspclickagain">Click again to hide Information.</string>
    <string name="newrequest">New Request</string>
    <string name="newrequestdot">.</string>
    <string name="insertitem">Insert\nProduct</string>
    <string name="filecomplain">File a\nComplain</string>
    <string name="recentbarter">Recent\nBarter</string>
    <string name="saveditems">Saved\nItems</string>
    <string name="deactivateaccount">Deactivate\nAccount</string>
    <string name="logout">Logout</string>
    <string name="backtoprofile">Back to Profile</string>
    <string name="upload">Upload</string>
    <string name="cancel">Cancel</string>
    <string name="productname">Product Name</string>
    <string name="productdes">Product\nDescription</string>
    <string name="productcat">Product\nCategory</string>
    <string name="mrp">Price of\nPurchase</string>
    <string name="purchasedate">Period of Purchase</string>
    <string name="isdamage">Is Damaged?</string>
    <string name="verification">Product\nVerification</string>
    <string name="damagereport">Damage Report</string>
    <string name="verificationreport">Verification\nReport</string>
    <string name="ship">Ready to Ship?</string>
    <string name="sharecontact">Share Contact Info</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="calculate">Calculate</string>
    <string name="number">Phone Number</string>
    <string name="years">Years</string>
    <string name="month">Months</string>
    <string name="swipeup">Swipe Up</string>
    <string name="entermrp">Please Enter Product Purchase Price</string>
    <string name="enterpurchaseperiod">Please Enter Period of Purchase</string>
    <string name="damagecheck">Please State whether the product is damage or not</string>
    <string name="inrs">Enter in RS</string>
    <string name="areyousure">Are you sure?</string>
    <string name="iamsure">Yes I am Sure!</string>
    <string name="fillallfield">Please Fill All Fields</string>
    <string name="productuploadfailed">Product Upload Failed! Please Try Again</string>
    <string name="productuploaded">Product Uploaded Successfully</string>
    <string name="deactivationsuccessful">Your Account Has Been Deactivated Successfully!</string>
    <string name="deactivatedes">We are sorry to hear you go, once you deactivate your account you will lose all of your data and will not be able to recover it!</string>
    <string name="reqbarter">Request Barter</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="pidcopy">Product ID Copied!</string>
    <string name="sidcopy">Seller ID Copied!</string>
    <string name="addtosave">Product Added to Saved Items!</string>
    <string name="removefromsave">Product Removed from Saved Items!</string>
    <string name="copysellerid">Copy SellerID </string>
    <string name="reqsent">Barter Request Sent</string>
    <string name="newReq">New Barter Request</string>
    <string name="clicktoopen">Click to Open</string>
    <string name="acceptbarter">Accept Barter</string>
    <string name="rejectbarter">Reject Barter</string>
    <string name="barteraccepted">Barter Accepted</string>
    <string name="barterrejected">Barter Rejected</string>
    <string name="copybarterId">"Tap to Copy BarterID "</string>
    <string name="barteridcopied">BarterID Copied</string>
    <string name="saveditemstxt">Saved Items</string>
    <string name="itemreoved">Item Removed</string>
    <string name="noproductfound">No Products Found</string>
    <string name="filecomplaintxt">File a Complain</string>
    <string name="solveyourproblem">Let\'s solve your problem together.</string>
    <string name="yourId">Your ID*</string>
    <string name="sellerID">Seller ID*</string>
    <string name="productID">Product ID</string>
    <string name="barterID">Barter ID</string>
    <string name="complaindes">Complain Description*</string>
    <string name="registercomplain">Register Complain</string>
    <string name="registerdsuccess">Your Complain Has Been Recorded!</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="barterthis">Barter This Product</string>
    <string name="productcontactshared">Shared Contact Details</string>
    <string name="productdeleted">Product Deleted</string>
    <string name="Attention">Attention</string>
    <string name="deletethis">Do you want to delete this?</string>
    <string name="productBasedon">Showing you products based on</string>
    <string name="productwillbeaddedbacksoon">Product will be added back soon</string>

</resources>