<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileRegistration"
    android:id="@+id/base">

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="28dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/back_arrow"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tellusabout" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="274dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:layout_marginBottom="38dp"
            android:gravity="center"
            android:text="@string/tellusabout"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/namefieldreg"
                    android:layout_width="290dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="9dp"
                    android:background="@drawable/gray_background"
                    android:hint="@string/fullname"
                    android:paddingLeft="20dp"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/agefieldreg"
                    android:layout_width="290dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/gray_background"
                    android:hint="@string/enter_age"
                    android:paddingLeft="20dp"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"
                    android:inputType="number"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/selectgender"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:layout_marginBottom="19dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:id="@+id/gendergroup">

                    <RadioButton
                        android:id="@+id/genderMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/genderFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />

                    <RadioButton
                        android:id="@+id/genderother"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/other" />

                </RadioGroup>

                <Button
                    android:id="@+id/continueBtnabout"
                    android:layout_width="290dp"
                    android:layout_height="50dp"
                    android:background="@drawable/primary_btn_bg"
                    android:text="@string/continuetxt"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:layout_marginBottom="18dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>