<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/base">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:gravity="center_horizontal"
            android:text="@string/create_account"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:alpha=".54"
            android:gravity="center_horizontal"
            android:text="@string/main_description"
            android:textColor="#111111"
            android:textSize="16sp" />

        <Button
            android:id="@+id/signupBtn"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:background="@drawable/primary_btn_bg"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="38dp"
        android:layout_marginBottom="38dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:alpha=".54"
            android:gravity="center_horizontal"
            android:text="OR"
            android:textColor="#111111"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:alpha=".54"
            android:gravity="center_horizontal"
            android:text="@string/signin"
            android:textColor="#111111"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/emailfieldlgin"
                    android:layout_width="290dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="9dp"
                    android:background="@drawable/gray_background"
                    android:hint="@string/emailid"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/passfieldlgin"
                    android:layout_width="290dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/gray_background"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:imeOptions="actionGo"/>

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="290dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/primary_btn_bg"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:gravity="center_horizontal"
            android:text="@string/visitor"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/visitortxt"/>
    </LinearLayout>


</LinearLayout>
