<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FileAComplain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/backfromcomplain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="28dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backtoprofile"
                android:textColor="#fff"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/filecomplaintxt"
            android:textColor="#fff"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.64"
            android:gravity="center"
            android:text="@string/solveyourproblem"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.64"
                android:gravity="start"
                android:text="@string/yourId"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/complainUserID"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/gray_background"
                android:enabled="false"
                android:padding="8dp"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:alpha="0.64"
                android:gravity="start"
                android:text="@string/sellerID"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/complainSellerID"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/gray_background"
                android:padding="8dp"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:alpha="0.64"
                android:gravity="start"
                android:text="@string/productID"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/complainProductID"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/gray_background"
                android:padding="8dp"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:alpha="0.64"
                android:gravity="start"
                android:text="@string/barterID"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/complainBarterID"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/gray_background"
                android:padding="8dp"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:alpha="0.64"
                android:gravity="start"
                android:text="@string/complaindes"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/complainDescription"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/gray_background"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textColor="#000"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/regComplainBtn"
        android:layout_width="365dp"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/primary_btn_bg"
        android:text="@string/registercomplain"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="16sp" />
</LinearLayout>