<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registration.TermsandCondition"
    android:id="@+id/base">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tandc"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="320dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/termsandconditionimage" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/gray_background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tnc"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginRight="28dp"/>
        </LinearLayout>
    </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/acceptBtn"
            android:layout_width="335dp"
            android:layout_height="50dp"
            android:background="@drawable/primary_btn_bg"
            android:text="@string/accept"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/rejectBtn"
            android:layout_width="335dp"
            android:layout_height="50dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="21dp"
            android:background="@drawable/red_baground"
            android:text="@string/reject"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>